# keyboard

./: .gitignore  4x4pad.json  Cargo.toml  README.md  generic60.json  ortho40.json  ortho75.json  tougo.dxf  tougo.json  tougo_cs.json  tougo_rs.json  xd75.json
cli/: Cargo.toml  README.md
cli/src/: command.rs  main.rs
lib/: CRATE.md  Cargo.toml  README.md
lib/src/: lib.rs
lib/src/actions/: dxf_io.rs  mod.rs  ply_io.rs
lib/src/config/: mod.rs  model.rs  reader.rs
lib/src/geometry/: exported_geometry.rs  mod.rs  primitives.rs
samples/: 4x4pad.dxf  4x4pad.ply  4x4pad.stl  generic60.dxf  generic60.ply  generic60.stl  generic60wscrewholes.ply  ortho40.dxf  ortho40.ply  ortho40.stl  tougo_cs.dxf  tougo_cs.ply
src/: exported_geometry.rs  main.rs  primitives.rs  transformations.rs
src/actions/: mod.rs  ply_export.rs
src/config/: model.rs  reader.rs
ui/: Cargo.toml  README.md
ui/src/: main.rs  virtual_keyboard.rs
