[package]
name = "keyboard"
version = "0.1.0"
authors = ["stefano <s.kouroupis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egaku2d = "0.5.2"
serde = "1.0.110"
serde_json = "1.0.53"
dxf = "0.4.0"
rtriangulate = "0.3.1"
ply-rs = "0.1.3"