[package]
name = "kpt_ui"
version = "0.1.0"
authors = ["stefano <s.kouroupis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egaku2d = "0.5.2"
serde = "1.0.110"
serde_json = "1.0.53"
dxf = "0.4.0"
spade = "1.8.2"
ply-rs = "0.1.3"
cgmath = "0.17.0"
orchestrator = "0.2.0"
kpt_lib = { path = "../lib" }